# uplift-takehome

./: .eslintrc.js  .prettierignore  .prettierrc  .tool-versions  Makefile  NOTES.md  README.md  TODO.md  docker-compose.backend.yml  docker-compose.frontend.yml  package-lock.json  package.json  setup.ts
.github/workflows/: all-os-checks.yml  backend-node.yml  backend-php.yml  backend.yml  frontend.yml  post-template-clone.yml
.uplift/content/backend/: node.md  php.md  problem.md
.uplift/content/backend/python/: docker.md  intro.md  local.md  rest.md
.uplift/content/common/: docker.md  intro.md  license.md
.uplift/content/frontend/: docker.md  intro.md  local.md  rest.md
.uplift/content/fullstack/: docker.md  intro.md  rest.md
docker/Docker.frontend/: Dockerfile
docker/Docker.server/: Dockerfile  entrypoint.sh
frontend/: codegen.yml  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Card.tsx
frontend/src/components/Game/: Game.tsx
frontend/src/components/Game/hooks/: useGameState.ts
frontend/src/components/Game/hooks/tests/: useGameState.test.tsx
frontend/src/hooks/: useGameState.ts
node-server/: codegen.yml
server/: manage.py  pyproject.toml  schema.graphql
server/tests/: test_env.py
server/uplifty/: schema.py  settings.py  urls.py  views.py
server/uplifty/graphql/: schema.py
server/uplifty/graphql/types/: logout_user.py  user.py
